--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
       <!-- This is the menu tab -->
-      <div class="ui inverted menu">
+      <div class="ui attached stackable inverted menu">
         <div class="item"><img src="images/logo.png"></div>
         <a class="item">Home </a>
         <div class="ui dropdown item">
@@ -31,8 +31,8 @@
     </div>
 
     <!-- This is the cards place holder-->
-    <div class="ui container">
-    <div class="ui four nested cards">
+    <div class="ui four column doubling stackable justified container">
+    <div class="ui cards">
       <div class="card">
         <div class="blurring dimmable image">
           <div class="ui dimmer">
@@ -227,7 +227,35 @@
         </div>
       </div>
       </div>
-
+    <!-- This is the footer-->
+    <div class="ui fluid center aligned container">
+    <div class="ui centered horizontal list">
+    <div class="item">
+        <i class="users icon"></i>
+        <div class="content">
+          Created by Fom LLC
+        </div>
+      </div>
+      <div class="item">
+        <i class="marker icon"></i>
+        <div class="content">
+          Nairobi Ke
+        </div>
+      </div>
+      <div class="item">
+        <i class="mail icon"></i>
+        <div class="content">
+          <a href="mailto:info@fom.co.ke">info@fom.co.ke</a>
+        </div>
+      </div>
+      <div class="item">
+        <i class="linkify icon"></i>
+        <div class="content">
+          <a href="http://www.fom.co.ke">fom.co.ke</a>
+        </div>
+      </div>
+    </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
