A few UI touchups

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <!-- This is the menu tab -->
       <div class="ui attached stackable inverted menu">
         <div class="item"><img src="images/logo.png"></div>
-        <a class="item">Home </a>
+        <a class="item" href="#">Home </a>
         <div class="ui dropdown item">
           Categories
           <i class="dropdown icon"></i>
@@ -20,8 +20,8 @@
           </div>
         </div>
         <div class="right menu">
-          <a class="item">Log in </a>
-          <a class="item">Sign up</a>
+          <a class="item" href="login.html">Log in </a>
+          <a class="item" href="signup.html">Sign up</a>
         </div>
       </div>
 
@@ -31,8 +31,8 @@
     </div>
 
     <!-- This is the cards place holder-->
-    <div class="ui four column doubling stackable justified container">
-    <div class="ui cards">
+    <div class="ui four column doubling stackable container">
+     <div class="ui cards">
       <div class="card">
         <div class="blurring dimmable image">
           <div class="ui dimmer">
